<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_containerHome"
        android:layout_width="match_parent"
...
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintVertical_bias="0.227"
        app:srcCompat="@drawable/perfil_icon" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-44dp"
...
