<?xml version="1.0" encoding="utf-8"?>

<!-- Contenido principal -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textMisRutinas"
        android:layout_marginTop="58dp" />

    <TextView
        android:id="@+id/textEmptyRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/textMisRutinas"
        android:text="No hay rutinas, añade una" />

    <TextView
        android:id="@+id/textMisRutinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="133dp"
        android:text="Mis Rutinas"
        android:textSize="24sp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/toolbar3"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="334dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintVertical_bias="0.227"
        app:srcCompat="@drawable/perfil_icon" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-44dp"
        android:layout_marginEnd="63dp"
        android:text="Nombre de Usuario"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAddRoutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recyclerView"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text=" + " />

</RelativeLayout>

